syntax = "proto3";
/**
 * Agent executer related messages.
 */


package proto;
option go_package = "github.com/headend/agent-executer-service/proto";

import "google/protobuf/any.proto";

/**
 * Represents the params to identify agent.
 */
message AgentEXERequest {
    int64 agent_id = 1 [json_name = "agent_id"];
    int64 profile_id = 2 [json_name = "profile_id"];
    int64 exe_id = 3 [json_name = "exe_id"];
    int64 exe_type = 4 [json_name = "exe_type"];
    repeated google.protobuf.Any tunnel_data = 5 [json_name = "tunnel_data"];
}

message AgentEXEResponse {
    /**
    * Status
    */
    AgentEXEResponseStatus status = 1 [json_name = "status"];
    /**
    * Slice of agent object
    */
    repeated AgentEXERequest agentexes = 2 [json_name = "data"];
}

enum AgentEXEResponseStatus {
    FAIL = 0; /// Success
    SUCCESS = 1; /// Failed
}

service AgentEXEService {
    /**
    * Used to run urgent task
    */
    rpc RunUrgentTask (AgentEXERequest) returns (AgentEXEResponse){
    }

    /**
    * Used to run command shell on linux
    */
    rpc RunShell (AgentEXERequest) returns (AgentEXEResponse) {
    }
}

